--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@hotwired/turbo-rails": "^8.0.2",
     "esbuild": "^0.20.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remount": "^1.0.0"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets"
