--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.2",
+    "bootstrap": "^5.3.2",
     "esbuild": "^0.20.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "remount": "^1.0.0"
   },
